--- a/superadmin/templates/superadmin/base.html
+++ b/superadmin/templates/superadmin/base.html
@@ -88,19 +88,19 @@
                             <span class="material-symbols-outlined">person_add</span>
                             Onboard Program Coordinators
                         </a>
-                        <a href="teacher-list.html" id="nav-thinking-coaches">
+                        <a href="{% url 'teacher_list' %}" id="nav-thinking-coaches">
                             <span class="material-symbols-outlined">psychology</span>
                             Thinking Coaches
                         </a>
-                        <a href="add-teacher.html" id="nav-add-thinking-coaches">
+                        <a href="{% url 'onboard_teacher' %}" id="nav-add-thinking-coaches">
                             <span class="material-symbols-outlined">person_add</span>
                             Onboard Thinking Coaches
                         </a>
-                        <a href="student-list.html" id="nav-students-list">
+                        <a href="{% url 'student_list' %}" id="nav-students-list">
                             <span class="material-symbols-outlined">school</span>
                             Students List
                         </a>
-                        <a href="add-student.html" id="nav-add-student">
+                        <a href="{% url 'onboard_student' %}" id="nav-add-student">
                             <span class="material-symbols-outlined">person_add</span>
                             Onboard Student
                         </a>
